--- a/Graficadora/src/main/java/com/mycompany/graficadora/Graficadora.form
+++ b/Graficadora/src/main/java/com/mycompany/graficadora/Graficadora.form
@@ -73,7 +73,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="12" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Funci&#xf3;n Linear"/>
+        <Property name="text" type="java.lang.String" value="Funci&#xf3;n Lineal"/>
       </Properties>
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="linearBtn"/>
